# thread-local-allocator

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_common.h  fixed_size_bench.c  latency_bench.c  mixed_size_bench.c
benchmarks/plots/: generate_plots.py  results.json
include/memalloc/: allocator.h  common.h  free_list.h  slab_pool.h  thread_cache.h
src/: allocator.c  free_list.c  malloc_shim.c  mmap_utils.c  mmap_utils.h  slab_pool.c  slab_registry.c  slab_registry.h  thread_cache.c
tests/: CMakeLists.txt  test_alignment.c  test_coalesce.c  test_concurrent.c  test_double_free.c  test_thread_cache.c  test_values.c
